pyFormex 0.3.1 - release notes
==============================


Short overview of the most important design and feature changes
===============================================================

- Base -

- Configuration -
Fixed bugs in saving/reading of preferences


- Using pyFormex withou GUI -

- Help system -

- Documentation -



Detailed (though incomplete) changes since Release 0.3.1:
=========================================================

pyformex command
----------------
- An new option --nosplash prevents display of the startup message on the canvas.

pyformex GUI
------------
- Settings->Save Preferences: saves the preferences on demand


formex.py
---------

Formex class:
-------------

draw.py:
--------


canvas.py:
----------
canvas has a setBgColor method to set the background color
 

Experimental/Development 
========================
These files hold new and experimental functions. Their contents may be moved
to other files in future releases.


- properties.py :

- file2formex.py: 

- stl.py: 

- simple.py:

- mydict.py: