@@ -317,10 +317,10 @@ The previous examples were limited to a 2-D environment for simplicity. Of cours
   \begin{makeimage}
   \end{makeimage}
   \begin{latexonly}
-    \includegraphics[width=6cm]{images/pyramid}
+    \includegraphics[width=6cm]{images/pyramide}
   \end{latexonly}
   \begin{htmlonly}
-    \htmladdimg{../images/pyramid.png}
+    \htmladdimg{../images/pyramide.png}
   \end{htmlonly}  
   \caption{Pyramid}
   \label{pyramid}
